--- a/index.html
+++ b/index.html
@@ -69,7 +69,16 @@
         <section class="ads-section">
             <h2>Sponsored Ads</h2>
             <div class="ads">
-                <div class="ad">Ad 1</div>
+                <div class="ad">
+                    <ins class="adsbygoogle"
+                         style="display:block"
+                         data-ad-client="ca-pub-5500101237415276"
+                         data-ad-slot="1234567890"
+                         data-ad-format="rectangle"></ins>
+                    <script>
+                         (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+                </div>
                 <div class="ad">Ad 2</div>
                 <div class="ad">Ad 3</div>
             </div>
@@ -88,7 +97,8 @@
         </section>
     </div>
     <footer>
-        <p>&copy; 2025 My Ebook Website. All rights reserved.</p>
+        <p>&copy; 2025 Learn Python. All rights reserved.</p>
     </footer>
 </body>
 </html>
+
