--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5500101237415276"
-     crossorigin="anonymous"></script>
+            crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn Python</title>
@@ -69,6 +69,7 @@
         <section class="ads-section">
             <h2>Sponsored Ads</h2>
             <div class="ads">
+                <!-- Google AdSense Ad -->
                 <div class="ad">
                     <ins class="adsbygoogle"
                          style="display:block"
@@ -79,6 +80,7 @@
                          (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
                 </div>
+                <!-- Additional Ads (placeholders or other ads) -->
                 <div class="ad">Ad 2</div>
                 <div class="ad">Ad 3</div>
             </div>
@@ -101,4 +103,3 @@
     </footer>
 </body>
 </html>
-
