--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learn Python</title>
+    <title>Learn Python by elegos</title>
     <style>
         body {
             font-family: Arial, sans-serif;
