--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </section>
     </div>
     <footer>
-        <p>&copy; 2025 Learn Python. All rights reserved.</p>
+        <p>&copy; 2025 Learn Python. All rights reserved for elegos.</p>
     </footer>
 </body>
 </html>
